# TicTacToe

tictactoe/: CMakeLists.txt  Position.cpp  Position.h  main.cpp
tictactoe/Board/: Board.cpp  Board.h
tictactoe/Strategies/: AnyOpenCorner.cpp  AnyOpenCorner.h  AnyOpenSquare.cpp  AnyOpenSquare.h  BlockOpponent.cpp  BlockOpponent.h  PlayToWin.cpp  PlayToWin.h  Strategy.h
tictactoe/player/: Player.cpp  Player.h
